# yuca

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cmake_clean  demo.cpp  main.cpp  playground.cpp  yuca.spec
include/yuca/: document.hpp  indexer.hpp  key.h  key.hpp  version.hpp  yuca.cpp  yuca.h  yuca.hpp
src/: document.cpp  indexer.cpp  version.cpp
src/yuca/: document.cpp  document.hpp  indexer.cpp  indexer.hpp  key.cpp  key.hpp  types.hpp  utils.hpp  yuca.hpp
swig/: CMakeLists.txt  build.gradle  build.sh  run  yuca_java.i
swig/java/main/com/guacal/yuca/: Demo.java  Document.java  Indexer.java  Key.java  KeySet.java  OSUtils.java  SearchRequest.java  SearchResult.java  StringKey.java  StringList.java  Yuca.java
swig/java/main/com/guacal/yuca/collections/: KeyList.java  KeySet.java  SearchResultList.java  StringKeyList.java  StringList.java  YucaListIterator.java
tests/: all_tests.cpp  document_tests.cpp  document_tests2.cpp  indexer_tests.cpp  tests_includes.hpp  tests_main.cpp  utils_tests.cpp
